--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
 <!DOCTYPE html>
-<!--
-* CoreUI Free React.js Admin Template
-* @version v5.1.0
-* @link https://coreui.io/product/free-react-admin-template/
-* Copyright (c) 2024 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://github.com/coreui/coreui-free-react-admin-template/blob/main/LICENSE)
--->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -14,9 +7,9 @@
     <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>CoreUI Free React.js Admin Template</title>
+    <title>Air OutDoors Vender</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/image.png">
   </head>
   <body>
     <noscript>
@@ -24,6 +17,5 @@
     </noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.js"></script>
-    <!-- built files will be auto injected -->
   </body>
 </html>
