--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
-    <meta name="author" content="Łukasz Holeczek">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template" />
+    <meta name="author" content="Łukasz Holeczek" />
+    <meta
+      name="keyword"
+      content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React"
+    />
     <title>Air OutDoors Vender</title>
-    <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/image.png">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="shortcut icon" href="/image.png" />
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app
-    </noscript>
+    <noscript> You need to enable JavaScript to run this app </noscript>
     <div id="root"></div>
+    <!-- <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"
+      async
+      defer
+    ></script> -->
+
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
